# website

./: .gitignore  404.html  README.md  doctave.yaml  index.html  mkdocs.yml  pyproject.toml
backend/cdk-deployment/: index.html
backend/manual-steps/: index.html
backend/pre-requisites/: index.html
backend/sso-app-setup/: index.html
docs/: CNAME  README.md  index.md  install-backend.md  install-frontend.md  user-guide.md
docs/backend/: README.md  cdk-deployment.md  manual-steps.md  pre-requisites.md  sso-app-setup.md
docs/frontend/: README.md  installation.md  pre-requisites.md
docs/guide/: cargo-setup.md
docs/stylesheets/: extra.css
frontend/installation/: index.html
frontend/pre-requisites/: index.html
guide/cargo-setup/: index.html
infrastructure/: app.py  cdk.json  pyproject.toml  stack.py
overrides/partials/: header.html
search/: search_index.json
