[tool.poetry]
name = "raktar-docs"
version = "0.1.0"
description = "Dependencies for Raktar website"
authors = ["David Steiner"]

[tool.poetry.dependencies]
python = "~3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
